GraphGeneratorTest