@@ -1,20 +1,19 @@
 package org.trikkle;
 
-import org.trikkle.viz.MermaidGraphViz;
-
 import java.util.*;
 
 public class GraphGenerator {
+	private final static long SEED = 504957110;
+
 	public static Graph generateGraph(int numNodes, int numArcs) {
 		if (numArcs > numNodes) {
 			throw new IllegalArgumentException("numArcs must be less than or equal to numNodes");
 		}
 
-
 		// generate nodes
 		List<Node> nodes = new ArrayList<>();
 		for (int i = 0; i < numNodes; i++) {
-			nodes.add(new DiscreteNode(Set.of(intToExcelColumn(i + 1))));
+			nodes.add(new DiscreteNode(Collections.singleton(intToExcelColumn(i + 1))));
 		}
 		// generate arcs
 		List<Arc> arcs = new ArrayList<>();
@@ -24,34 +23,53 @@ public class GraphGenerator {
 				public void run() {
 				}
 			};
-			arc.name = String.valueOf(i);
+			arc.name = String.valueOf(i + 1);
 			arcs.add(arc);
 		}
 
 		// randomly generate todos
-		Random random = new Random(1000);
+		return getGraph(nodes, arcs, new Random(SEED));
+	}
+
+	private static Graph getGraph(List<Node> nodes, List<Arc> arcs, Random random) {
+		int numNodes = nodes.size();
+		int numArcs = arcs.size();
+
 		List<Todo> todos = new ArrayList<>();
-		Set<Node> notUsedNodes = new HashSet<>(nodes);
-		List<Node> notUsedOutputNodes = new ArrayList<>(nodes);
+		Map<Node, Set<Node>> dependenciesOfNode = new HashMap<>();
+		Set<Node> unusedNodes = new HashSet<>(nodes);
+		List<Node> unusedOutputNodes = new ArrayList<>(nodes);
 		for (int i = 0; i < numArcs; i++) {
-			int numDependencies = random.nextInt(numNodes) + 1;
+			int numDependencies = random.nextInt(numNodes + 1);
 			Set<Node> dependencies = new HashSet<>();
 			for (int j = 0; j < numDependencies; j++) {
 				dependencies.add(nodes.get(random.nextInt(numNodes)));
 			}
 
-//				if (dependencies.containsAll(notUsedOutputNodes)) continue;
-			Node outputNode = notUsedOutputNodes.get(random.nextInt(notUsedOutputNodes.size()));
+			Node outputNode = null;
+			Collections.shuffle(unusedOutputNodes, random);
+			for (Node unusedOutputNode : unusedOutputNodes) {
+				HashMap<Node, Set<Node>> copy = new HashMap<>(dependenciesOfNode);
+				copy.put(unusedOutputNode, dependencies);
+				if (!Graph.hasCycle(copy)) {
+					outputNode = unusedOutputNode;
+					break;
+				}
+			}
+			if (outputNode == null) {
+				return getGraph(nodes, arcs, new Random(random.nextLong()));
+			}
 
-			Todo todo = new Todo(dependencies, arcs.get(i), outputNode);
-			todos.add(todo);
-			notUsedNodes.remove(outputNode);
-			notUsedNodes.removeAll(dependencies);
-			notUsedOutputNodes.remove(outputNode);
+			todos.add(new Todo(dependencies, arcs.get(i), outputNode));
+			dependenciesOfNode.put(outputNode, dependencies);
+
+			unusedNodes.remove(outputNode);
+			unusedNodes.removeAll(dependencies);
+			unusedOutputNodes.remove(outputNode);
 		}
 
 		// add unused nodes to the dependencies of a random to do in to dos
-		for (Node node : notUsedNodes) {
+		for (Node node : unusedNodes) {
 			todos.get(random.nextInt(numArcs)).getDependencies().add(node);
 		}
 
@@ -75,11 +93,5 @@ public class GraphGenerator {
 			}
 		}
 		return sb.reverse().toString();
-	}
-
-	public static void main(String[] args) {
-		Graph graph = generateGraph(2, 1);
-		System.out.println(new MermaidGraphViz().visualize(graph));
-		System.out.println(graph.hasCycle());
 	}
 }
